updated security and service settings